--- a/src/main/resources/com/example/demo/DailyReport.fxml
+++ b/src/main/resources/com/example/demo/DailyReport.fxml
@@ -14,7 +14,26 @@
             <AnchorPane layoutX="26.0" layoutY="68.0" prefHeight="457.0" prefWidth="610.0" styleClass="gradientDarkBackgroundText" />
             <AnchorPane layoutX="26.0" layoutY="25.0" prefHeight="43.0" prefWidth="610.0" styleClass="gradientDarkBackgroundText">
                <children>
-                  <Text fill="WHITE" layoutX="14.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DAY LIST" textAlignment="CENTER">
+                  <Text fill="WHITE" layoutX="14.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DAILY REPORT" textAlignment="CENTER">
+                     <font>
+                        <Font name="Trebuchet MS Bold" size="24.0" />
+                     </font>
+                  </Text>
+               </children>
+            </AnchorPane>
+            <AnchorPane layoutX="26.0" layoutY="549.0" prefHeight="43.0" prefWidth="397.0" styleClass="gradientDarkBackgroundText">
+               <children>
+                  <Text fill="WHITE" layoutX="14.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TOTAL PROFIT" textAlignment="CENTER">
+                     <font>
+                        <Font name="Trebuchet MS Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="262.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="00000.00" textAlignment="CENTER">
+                     <font>
+                        <Font name="Trebuchet MS Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="374.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="€" textAlignment="CENTER">
                      <font>
                         <Font name="Trebuchet MS Bold" size="24.0" />
                      </font>
