--- a/src/main/resources/com/example/demo/Payment.fxml
+++ b/src/main/resources/com/example/demo/Payment.fxml
@@ -12,10 +12,15 @@
    <children>
       <AnchorPane layoutX="266.0" layoutY="64.0" prefHeight="622.0" prefWidth="661.0" styleClass="colorBackCenter">
          <children>
-            <AnchorPane layoutX="26.0" layoutY="68.0" prefHeight="231.0" prefWidth="435.0" styleClass="gradientDarkBackgroundText" />
-            <AnchorPane layoutX="26.0" layoutY="25.0" prefHeight="43.0" prefWidth="435.0" styleClass="gradientDarkBackgroundText">
+            <AnchorPane layoutX="30.0" layoutY="68.0" prefHeight="231.0" prefWidth="435.0" styleClass="gradientDarkBackgroundText" />
+            <AnchorPane layoutX="30.0" layoutY="25.0" prefHeight="43.0" prefWidth="435.0" styleClass="gradientDarkBackgroundText">
                <children>
-                  <Text fill="WHITE" layoutX="14.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DAY LIST" textAlignment="CENTER">
+                  <Text fill="WHITE" layoutX="14.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="ORDER INFORMATION TABLE" textAlignment="CENTER">
+                     <font>
+                        <Font name="Trebuchet MS Bold" size="24.0" />
+                     </font>
+                  </Text>
+                  <Text fill="WHITE" layoutX="365.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="11" textAlignment="CENTER">
                      <font>
                         <Font name="Trebuchet MS Bold" size="24.0" />
                      </font>
@@ -55,52 +60,57 @@
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
+            <Button layoutX="30.0" layoutY="547.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CANCEL" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </Button>
          </children></AnchorPane>
       <ImageView fitHeight="56.0" fitWidth="200.0" layoutX="497.0" layoutY="4.0">
          <image>
             <Image url="@../../../../../../image/Logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="748.0" layoutY="610.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="PAY" textAlignment="CENTER" textFill="WHITE">
+      <Button layoutX="748.0" layoutY="611.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="PAY" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Trebuchet MS Bold" size="18.0" />
          </font>
       </Button>
-      <AnchorPane layoutX="293.0" layoutY="381.0" prefHeight="214.0" prefWidth="153.0" styleClass="gradientGreyField">
+      <AnchorPane layoutX="296.0" layoutY="381.0" prefHeight="219.0" prefWidth="145.0" styleClass="gradientGreyField">
          <children>
             <Text fill="#0f5169" layoutX="8.0" layoutY="25.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CARD NUMBER" textAlignment="RIGHT" wrappingWidth="129.9349365234375">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Text>
-            <Text fill="#0f5169" layoutX="8.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DATE EXP." textAlignment="RIGHT" wrappingWidth="129.9349365234375">
+            <Text fill="#0f5169" layoutX="8.0" layoutY="71.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DATE EXP." textAlignment="RIGHT" wrappingWidth="129.9349365234375">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Text>
-            <Text fill="#0f5169" layoutX="8.0" layoutY="113.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CCV" textAlignment="RIGHT" wrappingWidth="129.9349365234375">
+            <Text fill="#0f5169" layoutX="8.0" layoutY="114.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CCV" textAlignment="RIGHT" wrappingWidth="129.9349365234375">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Text>
-            <Text fill="#0f5169" layoutX="8.0" layoutY="157.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAY " textAlignment="RIGHT" wrappingWidth="129.9349365234375">
+            <Text fill="#0f5169" layoutX="8.0" layoutY="158.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAY " textAlignment="RIGHT" wrappingWidth="129.9349365234375">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Text>
-            <Text fill="#0f5169" layoutX="8.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAY + TIPS" textAlignment="RIGHT" wrappingWidth="129.9349365234375">
+            <Text fill="#0f5169" layoutX="8.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="PAY + TIPS" textAlignment="RIGHT" wrappingWidth="129.9349365234375">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Text>
          </children>
       </AnchorPane>
-      <TextField layoutX="459.0" layoutY="381.0" prefHeight="35.0" prefWidth="272.0" promptText="CARD NUMBER" styleClass="textFild">
+      <TextField disable="true" layoutX="459.0" layoutY="381.0" prefHeight="35.0" prefWidth="272.0" promptText="CARD NUMBER" styleClass="textFild">
          <font>
             <Font name="Trebuchet MS Bold" size="18.0" />
          </font>
       </TextField>
-      <AnchorPane layoutX="448.0" layoutY="615.0" prefHeight="41.0" prefWidth="297.0" styleClass="gradientGreyField">
+      <AnchorPane layoutX="454.0" layoutY="615.0" prefHeight="41.0" prefWidth="291.0" styleClass="gradientGreyField">
          <children>
             <Text fill="#0f5169" layoutX="32.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error enter. Pleace try again" textAlignment="CENTER">
                <font>
@@ -109,22 +119,22 @@
             </Text>
          </children>
       </AnchorPane>
-      <TextField layoutX="459.0" layoutY="424.0" prefHeight="35.0" prefWidth="160.0" promptText="DATE EXP." styleClass="textFild">
+      <TextField disable="true" layoutX="459.0" layoutY="424.0" prefHeight="35.0" prefWidth="160.0" promptText="DATE EXP." styleClass="textFild">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </TextField>
-      <TextField layoutX="459.0" layoutY="470.0" prefHeight="35.0" prefWidth="160.0" promptText="CCV" styleClass="textFild">
+      <TextField disable="true" layoutX="459.0" layoutY="470.0" prefHeight="35.0" prefWidth="160.0" promptText="CCV" styleClass="textFild">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </TextField>
-      <TextField layoutX="459.0" layoutY="513.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY " styleClass="textFild">
+      <TextField disable="true" layoutX="459.0" layoutY="513.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY " styleClass="textFild">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </TextField>
-      <TextField layoutX="459.0" layoutY="559.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY + TIPS" styleClass="textFild">
+      <TextField disable="true" layoutX="459.0" layoutY="559.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY + TIPS" styleClass="textFild">
          <font>
             <Font size="18.0" />
          </font>
