--- a/src/main/resources/com/example/demo/Payment.fxml
+++ b/src/main/resources/com/example/demo/Payment.fxml
@@ -20,7 +20,7 @@
                         <Font name="Trebuchet MS Bold" size="24.0" />
                      </font>
                   </Text>
-                  <Text fill="WHITE" layoutX="365.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="11" textAlignment="CENTER">
+                  <Text fx:id="numberTablePayment" fill="WHITE" layoutX="365.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="11" textAlignment="CENTER">
                      <font>
                         <Font name="Trebuchet MS Bold" size="24.0" />
                      </font>
@@ -43,24 +43,24 @@
                         <Font name="Trebuchet MS Bold" size="24.0" />
                      </font>
                   </Text>
-                  <Text fill="WHITE" layoutX="14.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0000.00" textAlignment="RIGHT" wrappingWidth="99.46875">
+                  <Text fx:id="textTotalPayment" fill="WHITE" layoutX="14.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0000.00" textAlignment="RIGHT" wrappingWidth="99.46875">
                      <font>
                         <Font name="Trebuchet MS Bold" size="24.0" />
                      </font>
                   </Text>
                </children>
             </AnchorPane>
-            <Button layoutX="480.0" layoutY="26.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CASH" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="buttonPaymentCash" layoutX="480.0" layoutY="26.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CASH" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="480.0" layoutY="317.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CARD" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="buttonPaymentCard" layoutX="480.0" layoutY="317.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CARD" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
-            <Button layoutX="30.0" layoutY="547.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CANCEL" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="buttonCancelPayment" layoutX="30.0" layoutY="547.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="CANCEL" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
@@ -71,7 +71,7 @@
             <Image url="@../../../../../../image/Logo.png" />
          </image>
       </ImageView>
-      <Button layoutX="748.0" layoutY="611.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="PAY" textAlignment="CENTER" textFill="WHITE">
+      <Button fx:id="buttonPayPayment" layoutX="748.0" layoutY="611.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="153.0" styleClass="buttonOrange" text="PAY" textAlignment="CENTER" textFill="WHITE">
          <font>
             <Font name="Trebuchet MS Bold" size="18.0" />
          </font>
@@ -105,36 +105,36 @@
             </Text>
          </children>
       </AnchorPane>
-      <TextField disable="true" layoutX="459.0" layoutY="381.0" prefHeight="35.0" prefWidth="272.0" promptText="CARD NUMBER" styleClass="textFild">
+      <TextField fx:id="fieldCardNumberPayment" disable="true" layoutX="459.0" layoutY="381.0" prefHeight="35.0" prefWidth="272.0" promptText="CARD NUMBER" styleClass="textFild">
          <font>
             <Font name="Trebuchet MS Bold" size="18.0" />
          </font>
       </TextField>
-      <AnchorPane layoutX="454.0" layoutY="615.0" prefHeight="41.0" prefWidth="291.0" styleClass="gradientGreyField">
+      <AnchorPane fx:id="errorPaymentField" layoutX="454.0" layoutY="615.0" prefHeight="41.0" prefWidth="291.0" styleClass="gradientGreyField">
          <children>
-            <Text fill="#0f5169" layoutX="32.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error enter. Pleace try again" textAlignment="CENTER">
+            <Text fx:id="errorPaymentText" fill="#0f5169" layoutX="32.0" layoutY="27.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Error enter. Pleace try again" textAlignment="CENTER">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Text>
          </children>
       </AnchorPane>
-      <TextField disable="true" layoutX="459.0" layoutY="424.0" prefHeight="35.0" prefWidth="160.0" promptText="DATE EXP." styleClass="textFild">
+      <TextField fx:id="fieldDataExpPayment" disable="true" layoutX="459.0" layoutY="424.0" prefHeight="35.0" prefWidth="160.0" promptText="DATE EXP." styleClass="textFild">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </TextField>
-      <TextField disable="true" layoutX="459.0" layoutY="470.0" prefHeight="35.0" prefWidth="160.0" promptText="CCV" styleClass="textFild">
+      <TextField fx:id="fieldCcvPayment" disable="true" layoutX="459.0" layoutY="470.0" prefHeight="35.0" prefWidth="160.0" promptText="CCV" styleClass="textFild">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </TextField>
-      <TextField disable="true" layoutX="459.0" layoutY="513.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY " styleClass="textFild">
+      <TextField fx:id="fieldPayPayment" disable="true" layoutX="459.0" layoutY="513.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY " styleClass="textFild">
          <font>
             <Font name="Trebuchet MS" size="18.0" />
          </font>
       </TextField>
-      <TextField disable="true" layoutX="459.0" layoutY="559.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY + TIPS" styleClass="textFild">
+      <TextField fx:id="fieldPayPlusTipsPayment" disable="true" layoutX="459.0" layoutY="559.0" prefHeight="35.0" prefWidth="160.0" promptText="PAY + TIPS" styleClass="textFild">
          <font>
             <Font size="18.0" />
          </font>
