--- a/src/main/resources/com/example/demo/MenuDrinks.fxml
+++ b/src/main/resources/com/example/demo/MenuDrinks.fxml
@@ -14,7 +14,7 @@
    <children>
       <AnchorPane layoutX="-1.0" layoutY="63.0" prefHeight="689.0" prefWidth="220.0" styleClass="gradientSideMenu" stylesheets="@style.css">
          <children>
-            <Button layoutX="12.0" layoutY="14.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="195.0" styleClass="buttonNavigationActive" text="BREAKFAST" textAlignment="CENTER">
+            <Button fx:id="switchToBreakfast" layoutX="12.0" layoutY="14.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="195.0" styleClass="buttonNavigationDeactive" text="BREAKFAST" textAlignment="CENTER">
                <effect>
                   <Blend />
                </effect>
@@ -38,7 +38,7 @@
                   <Font name="Trebuchet MS Bold" size="16.0" />
                </font>
             </Button>
-            <Button fx:id="switchToDrinks" layoutX="12.0" layoutY="160.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="195.0" styleClass="buttonNavigationDeactive" text="DRINKS" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="switchToDrinks" layoutX="12.0" layoutY="160.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="195.0" styleClass="buttonNavigationActive" text="DRINKS" textAlignment="CENTER" textFill="WHITE">
                <effect>
                   <Blend />
                </effect>
