--- a/src/main/resources/com/example/demo/MenuBreakfast.fxml
+++ b/src/main/resources/com/example/demo/MenuBreakfast.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.effect.Blend?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -14,7 +15,7 @@
    <children>
       <AnchorPane layoutX="-1.0" layoutY="63.0" prefHeight="689.0" prefWidth="220.0" styleClass="gradientSideMenu" stylesheets="@style.css">
          <children>
-            <Button layoutX="12.0" layoutY="14.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="195.0" styleClass="buttonNavigationActive" text="BREAKFAST" textAlignment="CENTER">
+            <Button fx:id="switchToBreakfast" layoutX="12.0" layoutY="14.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="195.0" styleClass="buttonNavigationActive" text="BREAKFAST" textAlignment="CENTER">
                <effect>
                   <Blend />
                </effect>
@@ -98,20 +99,41 @@
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="buttonRemoveLastFromList" layoutX="21.0" layoutY="559.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="347.0" styleClass="buttonOrange" text="REMOVE LAST FROM LIST" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="buttonRemoveLastFromList" layoutX="21.0" layoutY="558.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="347.0" styleClass="buttonOrange" text="REMOVE LAST FROM LIST" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
-            <Button fx:id="buttonCompleteOrder" layoutX="388.0" layoutY="559.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="347.0" styleClass="buttonOrange" text="COMPLETE ORDER" textAlignment="CENTER" textFill="WHITE">
+            <Button fx:id="buttonCompleteOrder" layoutX="390.0" layoutY="558.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="347.0" styleClass="buttonOrange" text="COMPLETE ORDER" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
-         </children></AnchorPane>
+            <Button fx:id="buttonAmountMinus" layoutX="21.0" layoutY="496.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="58.0" styleClass="buttonOrange" text="&lt;" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonAmountPlus" layoutX="310.0" layoutY="496.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="58.0" styleClass="buttonOrange" text="&gt;" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </Button>
+            <Button fx:id="buttonAddToOrder" layoutX="390.0" layoutY="496.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="347.0" styleClass="buttonOrange" text="ADD TO ORDER" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </Button>
+            <TextField fx:id="menuFieldAmountDish" alignment="CENTER" layoutX="92.0" layoutY="496.0" prefHeight="50.0" prefWidth="205.0" styleClass="buttonOrange" text="1">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </TextField>
+         </children>
+      </AnchorPane>
       <AnchorPane layoutX="975.0" layoutY="63.0" prefHeight="689.0" prefWidth="226.0" styleClass="gradientSideMenu" stylesheets="@style.css">
          <children>
-            <AnchorPane layoutX="10.0" layoutY="428.0" prefHeight="40.0" prefWidth="205.0" styleClass="gradientDarkBackgroundText">
+            <AnchorPane layoutX="11.0" layoutY="406.0" prefHeight="40.0" prefWidth="205.0" styleClass="gradientDarkBackgroundText">
                <children>
                   <Text fx:id="textNumOfClient" fill="WHITE" layoutX="26.0" layoutY="26.0" strokeType="OUTSIDE" strokeWidth="0.0" text="NUMBER OF CLIENTS" textAlignment="CENTER">
                      <font>
@@ -129,69 +151,6 @@
                   </Text>
                </children>
             </AnchorPane>
-            <RadioButton fx:id="buttonRadioMoreThanSixPerson" contentDisplay="CENTER" layoutX="10.0" layoutY="481.0" mnemonicParsing="false" prefHeight="48.0" prefWidth="205.0" styleClass="buttonGreen" text="more than 6 persons" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="14.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-            </RadioButton>
-            <Button fx:id="radioButtonTable11" accessibleRole="RADIO_BUTTON" layoutX="16.0" layoutY="66.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="11" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable12" accessibleRole="RADIO_BUTTON" layoutX="88.0" layoutY="66.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="12" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable13" accessibleRole="RADIO_BUTTON" layoutX="160.0" layoutY="66.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="13" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable14" accessibleRole="RADIO_BUTTON" layoutX="16.0" layoutY="133.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="14" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable15" accessibleRole="RADIO_BUTTON" layoutX="88.0" layoutY="133.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="15" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable16" accessibleRole="RADIO_BUTTON" layoutX="160.0" layoutY="133.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="16" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable20" accessibleRole="RADIO_BUTTON" layoutX="16.0" layoutY="200.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="195.0" styleClass="buttonGreen" text="20" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable36" accessibleRole="RADIO_BUTTON" layoutX="16.0" layoutY="264.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="88.0" styleClass="buttonGreen" text="36" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable37" accessibleRole="RADIO_BUTTON" layoutX="126.0" layoutY="264.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="88.0" styleClass="buttonGreen" text="37" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable38" accessibleRole="RADIO_BUTTON" layoutX="16.0" layoutY="332.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="88.0" styleClass="buttonGreen" text="38" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
-            <Button fx:id="radioButtonTable39" accessibleRole="RADIO_BUTTON" layoutX="126.0" layoutY="332.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="88.0" styleClass="buttonGreen" text="39" textAlignment="CENTER" textFill="WHITE">
-               <font>
-                  <Font name="Trebuchet MS Bold" size="18.0" />
-               </font>
-            </Button>
             <Button fx:id="buttonCloseTable" layoutX="10.0" layoutY="558.0" minHeight="-Infinity" minWidth="50.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="205.0" styleClass="buttonOrange" text="CLOSE TABLE" textAlignment="CENTER" textFill="WHITE">
                <font>
                   <Font name="Trebuchet MS Bold" size="18.0" />
@@ -202,6 +161,66 @@
                   <Font name="Trebuchet MS Bold" size="18.0" />
                </font>
             </Button>
+            <CheckBox fx:id="checkLessFivePerson" layoutX="38.0" layoutY="460.0" mnemonicParsing="false" text="LESS 5 PERSONS" textFill="WHITE">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="16.0" />
+               </font>
+            </CheckBox>
+            <ToggleButton fx:id="toggleTable11" layoutX="16.0" layoutY="69.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="11" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable12" layoutX="89.0" layoutY="69.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="12" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable13" layoutX="160.0" layoutY="69.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="13" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable14" layoutX="16.0" layoutY="136.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="14" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable15" layoutX="89.0" layoutY="136.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="15" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable16" layoutX="160.0" layoutY="136.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" styleClass="buttonGreen" text="16" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable20" layoutX="16.0" layoutY="202.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="195.0" styleClass="buttonGreen" text="20" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable36" layoutX="17.0" layoutY="272.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="84.0" styleClass="buttonGreen" text="36" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable37" layoutX="127.0" layoutY="272.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="84.0" styleClass="buttonGreen" text="37" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable38" layoutX="17.0" layoutY="340.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="84.0" styleClass="buttonGreen" text="38" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
+            <ToggleButton fx:id="toggleTable39" layoutX="127.0" layoutY="340.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="84.0" styleClass="buttonGreen" text="39" textAlignment="CENTER">
+               <font>
+                  <Font name="Trebuchet MS Bold" size="18.0" />
+               </font>
+            </ToggleButton>
          </children></AnchorPane>
       <ImageView fitHeight="56.0" fitWidth="200.0" layoutX="497.0" layoutY="4.0">
          <image>
